# hypnus

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: continuous-deployment.yml  continuous-integration.yml  main.yml
hypnus/: main.py
morpheus/: main.py  power.py
tests/: test_main.py  test_power.py  test_tempo.py
